; ModuleID = '/home/carl/AnghaBench/linux/net/core/extr_bpf_sk_storage.c_sk_storage_delete.c'
source_filename = "/home/carl/AnghaBench/linux/net/core/extr_bpf_sk_storage.c_sk_storage_delete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sock = type { i32 }
%struct.bpf_map = type { i32 }
%struct.bpf_sk_storage_data = type { i32 }

@ENOENT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sock*, %struct.bpf_map*)* @sk_storage_delete to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sk_storage_delete(%struct.sock* %0, %struct.bpf_map* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.sock*, align 8
  %5 = alloca %struct.bpf_map*, align 8
  %6 = alloca %struct.bpf_sk_storage_data*, align 8
  store %struct.sock* %0, %struct.sock** %4, align 8
  store %struct.bpf_map* %1, %struct.bpf_map** %5, align 8
  %7 = load %struct.sock*, %struct.sock** %4, align 8
  %8 = load %struct.bpf_map*, %struct.bpf_map** %5, align 8
  %9 = call %struct.bpf_sk_storage_data* @sk_storage_lookup(%struct.sock* %7, %struct.bpf_map* %8, i32 0)
  store %struct.bpf_sk_storage_data* %9, %struct.bpf_sk_storage_data** %6, align 8
  %10 = load %struct.bpf_sk_storage_data*, %struct.bpf_sk_storage_data** %6, align 8
  %11 = icmp ne %struct.bpf_sk_storage_data* %10, null
  br i1 %11, label %15, label %12

12:                                               ; preds = %2
  %13 = load i32, i32* @ENOENT, align 4
  %14 = sub nsw i32 0, %13
  store i32 %14, i32* %3, align 4
  br label %19

15:                                               ; preds = %2
  %16 = load %struct.bpf_sk_storage_data*, %struct.bpf_sk_storage_data** %6, align 8
  %17 = call i32 @SELEM(%struct.bpf_sk_storage_data* %16)
  %18 = call i32 @selem_unlink(i32 %17)
  store i32 0, i32* %3, align 4
  br label %19

19:                                               ; preds = %15, %12
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}

declare dso_local %struct.bpf_sk_storage_data* @sk_storage_lookup(%struct.sock*, %struct.bpf_map*, i32) #1

declare dso_local i32 @selem_unlink(i32) #1

declare dso_local i32 @SELEM(%struct.bpf_sk_storage_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
